kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-a
spec:
  ports:
  - name: port-8080
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: app-a
