kustomize/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-a
spec:
  rules:
  - host: app-a.127.0.0.1.nip.io
    http:
      paths:
      - backend:
          service:
            name: app-a
            port:
              number: 8080
        path: /
        pathType: ImplementationSpecific
